[ DOC ] 커밋 템플릿 수정 및 오늘해야할일 템플릿 수정

--- a/work-template/오늘해야할일.md
+++ b/work-template/오늘해야할일.md
@@ -1,16 +1,47 @@
-# 2020년 03월 10일 (제목한일요약)
+# 2020년 03월 08일 도커와 AWS 세팅(title)
+
+- 도커를 이용해 AWS에 배포하는 과정을 진행하며, 학습함
+
+## 이 글을 수정했나요?🤫
+
+> 수정 기록 없음
 
 ## 전날 해결하지 못했던 부분🤔
 
+> 없음
+
 ## 오늘 해야 할 일🐝
+
+- [ ] 도커를 설치해야한다
+- [ ] 도커의 기본인 이미지와 컨테이너에 대해 이해한다
+- [ ] AWS에 인스턴스를 생성한다
+- [ ] 도커를 이용해 AWS에 간단한 앱을 배포한다
+
+> 없음
+
+## 오늘 한 일🤠
+
+> 없음
 
 ## 새로운 기술😲
 
+- Docker란?
+
+- Docker Image란?
+- Docker Container란?
+- AWS 인스턴스 세팅하기
+- Docker를 이용해 AWS에 앱 배포하기
+
+> 없음
+
 ## 오늘 해결하지 못한 부분😥
 
+> 없음
 
 ## 조금 더 알아봐야 하는 부분👩🏻‍🎨
 
+> 없음
 
 ## 오늘 있었던 이슈 및 회고🌚
 
+> 없음
